# Robocup-Humanoid-

./: .gitattributes  .gitignore  LICENSE  README.md  Striker Baseline.md  booster_soccer.layout  improvement_analysis.md  motion_control_events.txt
GameController-master/: Cargo.toml  README.md
GameController-master/config/: teams.yaml
GameController-master/config/large_advanced/: params.yaml
GameController-master/config/large_foundation/: params.yaml  teams.yaml
GameController-master/config/middle_advanced/: params.yaml  teams.yaml
GameController-master/config/middle_foundation/: params.yaml
GameController-master/config/small_advanced/: params.yaml  teams.yaml
GameController-master/config/small_foundation/: params.yaml
GameController-master/frontend/: package-lock.json
GameController-master/frontend/src/: actions.js  api.js
GameController-master/frontend/src/components/: Launcher.jsx
GameController-master/game_controller_app/: Cargo.toml  tauri.conf.json
GameController-master/game_controller_app/src/: handlers.rs
GameController-master/game_controller_core/src/: action.rs  lib.rs  timer.rs  types.rs
GameController-master/game_controller_core/src/actions/: finish_half.rs  finish_penalty_shot.rs  free_penalty_shot.rs  free_set_play.rs  goal.rs  mod.rs  penalize.rs  select_penalty_shot_player.rs  start_extra_time.rs  start_penalty_shootout.rs  start_set_play.rs  stop_play.rs  substitute.rs  switch_half.rs  timeout.rs  unpenalize.rs
GameController-master/game_controller_logs/src/: statistics.rs
GameController-master/game_controller_msgs/headers/: RoboCupGameControlData.h
GameController-master/game_controller_msgs/src/: control_message.rs  lib.rs
GameController-master/game_controller_net/src/: control_message_sender.rs
GameController-master/game_controller_runtime/src/: cli.rs  launch.rs  lib.rs
install/: local_setup.sh  setup.sh
install/booster_interface/share/booster_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/booster_msgs/share/booster_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/brain/lib/brain/: brain_node
install/brain/share/brain/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/detection_converter/lib/detection_converter/: detection_converter_node.py
install/detection_converter/share/detection_converter/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
scripts/: build.sh  build_agent.sh  build_no_cuda.sh  disable_motion_control.sh  enable_motion_control.sh  motion_control_status.sh  sim_start.sh  sim_start_multi.sh  start.sh  start_brain.sh  start_vision.sh  stop.sh
src/brain/: CMakeLists.txt  package.xml
src/brain/behavior_trees/: game.xml
src/brain/config/: config.yaml  config_local.yaml
src/brain/include/: brain.h  brain_communication.h  brain_config.h  brain_data.h  brain_log.h  brain_tree.h  locator.h  robot_client.h  team_communication_msg.h  types.h  visualization_publisher.h
src/brain/launch/: launch.py
src/brain/src/: brain.cpp  brain_communication.cpp  brain_config.cpp  brain_log.cpp  brain_tree.cpp  locator.cpp  main.cpp  robot_client.cpp  visualization_publisher.cpp
src/communication/: CMakeLists.txt  README.md  package.xml
src/communication/config/: team_communication.yaml
src/communication/include/communication/: team_communication_node.h
src/communication/launch/: team_communication.launch.py
src/communication/msg/: TeammateBall.msg  TeammateBallArray.msg
src/communication/src/: main.cpp  team_communication_node.cpp
src/detection_converter/: CMakeLists.txt  package.xml
src/detection_converter/launch/: detection_converter.launch.py
src/detection_converter/scripts/: detection_converter_node.py
src/game_controller/: CMakeLists.txt  package.xml
src/game_controller/include/: RoboCupGameControlData.h  game_controller_node.h
src/game_controller/launch/: launch.py
src/game_controller/src/: game_controller_node.cpp
src/interface/booster_msgs/: package.xml
src/interface/booster_ros2_interface/: CMakeLists.txt
src/interface/game_controller_interface/: CMakeLists.txt
src/motion_control/: CMakeLists.txt  README.md  package.xml
src/motion_control/config/: config.yaml
src/motion_control/launch/: actuator_monitor.launch.py  launch.py  motion_control.launch.py  start_pose.launch.py
src/motion_control/model/: README.md  policy.onnx
src/motion_control/model/Walking/: policy.onnx
src/motion_control/src/: actuator_monitor_node.cpp  custom_motion_node.cpp  motion_control_node.cpp  start_pose_node.cpp
src/robot_communication/: CMakeLists.txt  package.xml
src/robot_communication/examples/: team_comm_usage.cpp
src/robot_communication/launch/: launch.py
src/robot_communication/src/: robot_communication_node.cpp
src/sound_play/: setup.py
src/vision/: CMakeLists.txt  package.xml
src/vision/config/: field.yaml  vision.yaml
src/vision/include/booster_vision/: color_classifier.hpp  vision_node.h
src/vision/include/booster_vision/model/onnx/: detection_impl.h  segmentation_impl.h
src/vision/launch/: launch.py
src/vision/model/: best_orin.engine  best_orin_10.3.engine  best_seg_orin.engine  best_seg_orin_10.3.engine  k1_realsense_10.3.engine
src/vision/model/backup_bad_engines/: best_orin.engine
src/vision/scripts/: install_onnxruntime.sh
src/vision/src/: main.cpp  vision_node.cpp
src/vision/src/calibration/: CMakeLists.txt  calibration_node.cpp
src/vision/src/model/: CMakeLists.txt  detector.cc  segmentor.cc
src/vision/src/model/onnx/: CMakeLists.txt  detection_impl.cpp  segmentation_impl.cpp
src/vision/src/model/trt/: impl.cpp
third_party_aarch64/: install_onnxruntime.sh  onnxruntime-linux-aarch64-1.23.2.tgz
(+913 files in other folders)
