<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_communication</name>
  <version>0.0.0</version>
  <description>UDP relay for robot-to-robot team communication.</description>
  <maintainer email="chengcheng@booster.tech">Cheng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>game_controller_interface</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>brain</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
